--- a/cookies.html
+++ b/cookies.html
@@ -97,5 +97,12 @@
     <div class="contact">
         <p>Questions about cookies? Contact us at: <strong>me@okie-dookie.com</strong></p>
     </div>
+
+    <h2>Related Policies</h2>
+    <p>Please also review our:</p>
+    <ul>
+        <li><a href="/">Terms of Service</a></li>
+        <li><a href="/privacy.html">Privacy Policy</a></li>
+    </ul>
 </body>
 </html>
