--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
             border-radius: 5px;
             margin: 20px 0;
         }
+        .emergency {
+            background-color: #f8d7da;
+            border: 1px solid #f5c6cb;
+            padding: 15px;
+            border-radius: 5px;
+            margin: 20px 0;
+        }
         .contact {
             background-color: #e8f4f8;
             padding: 15px;
@@ -72,8 +79,13 @@
             <li>Diagnose, treat, cure, or prevent any disease or medical condition</li>
             <li>Replace professional medical advice, diagnosis, or treatment</li>
             <li>Serve as a medical device under FDA, MHRA, Health Canada, TGA, or any other regulatory body</li>
+            <li>Identify or diagnose food allergies, intolerances, or sensitivities</li>
         </ul>
-        <p>Always consult your healthcare provider for medical advice. Never disregard professional medical advice or delay seeking it because of something you have learned from this App.</p>
+        <p>Patterns identified are correlations only and do not establish causation. Always consult your healthcare provider for medical advice. Never disregard professional medical advice or delay seeking it because of something you have learned from this App.</p>
+    </div>
+
+    <div class="emergency">
+        <p><strong>⚠️ EMERGENCY SITUATIONS:</strong> If you experience severe digestive symptoms, seek immediate medical attention. Do not use this App for emergency medical situations.</p>
     </div>
 
     <h2>4. User Eligibility</h2>
@@ -89,7 +101,7 @@
     <p>Users under the required age must have parental consent.</p>
 
     <h2>5. Privacy and Data</h2>
-    <p>Your privacy is important to us. Please review our <a href="/privacy.html">Privacy Policy</a> to understand how we collect, use, and protect your information.</p>
+    <p>Your privacy is important to us. Please review our <a href="/privacy.html">Privacy Policy</a> to understand how we collect, use, and protect your information. For information about cookies, see our <a href="/cookies.html">Cookie Policy</a>.</p>
 
     <h2>6. AI Analysis Service</h2>
     <p>Our optional AI analysis features use Google's Gemini API. By using AI features, you acknowledge:</p>
@@ -103,8 +115,8 @@
     <h2>7. Subscriptions and Payments</h2>
     <p>AI analysis features require a paid subscription:</p>
     <ul>
-        <li>Monthly: $3.99 USD (auto-renews monthly)</li>
-        <li>Annual: $29.99 USD (auto-renews yearly)</li>
+        <li>Monthly: $1.99 USD (auto-renews monthly)</li>
+        <li>Annual: $19.99 USD (auto-renews yearly)</li>
     </ul>
     <p>Subscriptions automatically renew unless cancelled at least 24 hours before the end of the current period. Manage subscriptions in your device's account settings.</p>
 
@@ -117,26 +129,32 @@
         <li>Input false or misleading data</li>
         <li>Rely solely on the App for medical decisions</li>
     </ul>
+    <p>You are responsible for the accuracy of data you enter.</p>
 
     <h2>9. Intellectual Property</h2>
     <p>The App and its content are owned by Okie-Dookie and protected by intellectual property laws. You may not copy, modify, or distribute any part of the App without permission.</p>
 
-    <h2>10. Limitation of Liability</h2>
-    <p>TO THE MAXIMUM EXTENT PERMITTED BY LAW, OKIE-DOOKIE SHALL NOT BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES, INCLUDING BUT NOT LIMITED TO PERSONAL INJURY, HEALTH CONDITIONS, OR MEDICAL OUTCOMES ARISING FROM YOUR USE OF THE APP.</p>
+    <h2>10. Warranty Disclaimer and Limitation of Liability</h2>
+    <p><strong>WARRANTY DISCLAIMER:</strong> THE APP IS PROVIDED "AS IS" WITHOUT WARRANTIES OF ANY KIND, EXPRESS OR IMPLIED.</p>
+    
+    <p><strong>LIMITATION OF LIABILITY:</strong> To the maximum extent permitted by law, Okie-Dookie shall not be liable for any indirect, incidental, special, consequential, or punitive damages arising from your use of the App. Our total liability to you shall not exceed the amount paid by you for subscriptions in the 12 months before any claim.</p>
 
     <h2>11. Indemnification</h2>
     <p>You agree to indemnify and hold harmless Okie-Dookie from any claims arising from your use of the App, violation of these Terms, or infringement of any third-party rights.</p>
 
     <h2>12. Changes to Terms</h2>
-    <p>We may update these Terms at any time. Continued use of the App after changes constitutes acceptance of the new Terms.</p>
+    <p>We may update these Terms at any time. We will notify you of material changes through the App. Continued use of the App after changes constitutes acceptance of the new Terms.</p>
 
     <h2>13. Termination</h2>
     <p>We may terminate or suspend your access to the App at any time for violation of these Terms.</p>
 
     <h2>14. Governing Law</h2>
-    <p>These Terms are governed by the laws of United Kingdom.</p>
+    <p>These Terms are governed by the laws of England and Wales.</p>
 
-    <h2>15. Contact Information</h2>
+    <h2>15. Severability</h2>
+    <p>If any provision of these Terms is found to be unenforceable, the remaining provisions shall continue in full force and effect.</p>
+
+    <h2>16. Contact Information</h2>
     <div class="contact">
         <p>For questions about these Terms, contact us at: <strong>me@okie-dookie.com</strong></p>
     </div>
